Modified BucketAddActivity.kt Modified activity_bucket_add.xml Added addPhoto feature Now user could add photos in their buckets while creating.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
 
     <string name="about_dev">Developed by\n<b><u>Harish. V</u></b>\n</string>
     <string name="about_group"><b>Follow me on</b></string>
+    <string name="add_activity_title">Create Bucket</string>
 </resources>
